# fastapi-course

./: Dockerfile  Learnings.md  README.md  docker-compose-dev.yml  docker-compose-prod.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
api/: Posts.http
app/: calculations.py  config.py  database.py  db.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
migrations/: env.py
migrations/versions/: 1a323eabcb76_create_posts_table.py  343d959dab9f_auto_vote.py  3c18797f05da_add_user_table.py  3e53e64a282f_add_foreign_key_to_post_table.py  40b609593d30_add_content_column_to_post_table.py  fd98fa6b55e1_add_last_few_columns_to_posts_table.py
tests/: conftest.py  database.py  test_calculations.py  test_posts.py  test_users.py  test_votes.py
